# pronunciation-dict

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
cloud/aws/: index.html
cloud/gcp/: index.html
cloud/other/: index.html
cloud_service_platform/aws/: index.html
development/browser/: index.html
development/ci_cd/: index.html
development/mobile_app/: index.html
development/programming_language/: index.html
development/stress_test/: index.html
development/testing/: index.html
development/text_editor/: index.html
development/tool/: index.html
docs/: index.md  os.md  programming_language.md  saas.md
docs/cloud/: aws.md  gcp.md  other.md
docs/cloud_service_platform/: aws.md
docs/development/: browser.md  ci_cd.md  mobile_app.md  programming_language.md  stress_test.md  testing.md  text_editor.md  tool.md
docs/infra/: configuration_management.md  container.md  database.md  distributed.md  linux_command.md  operation.md  os.md  server.md  vm.md
docs/saas/: no_code.md  other.md  sns.md  web_meeting.md
infra/configuration_management/: index.html
infra/container/: index.html
infra/database/: index.html
infra/distributed/: index.html
infra/linux_command/: index.html
infra/operation/: index.html
infra/os/: index.html
infra/server/: index.html
infra/vm/: index.html
os/: index.html
programming_language/: index.html
saas/: index.html
saas/no_code/: index.html
saas/other/: index.html
search/: search_index.json
(+2 files in other folders)
